--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title><%= full_title(yield(:title)) %></title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all',
@@ -8,12 +9,18 @@
     <%= javascript_pack_tag    'application', 
                                 'data-turbolinks-track': 'reload' %>
     <%= render 'layouts/shim' %>
-  </head>
-  <body>
+</head>
+
+<body>
     <%= render 'layouts/header' %>
     <div class="container">
-      <%= yield %>
-      <%= render 'layouts/footer' %>
+        <% flash.each do |message_type, message| %>
+        <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+        <% end %>
+        <%= yield %>
+        <%= render 'layouts/footer' %>
+        <%= debug(params) if Rails.env.development? %>
     </div>
-  </body>
+</body>
+
 </html>
